Added GNU GPL v3 License to project.  Converted all files to Unix UTF-8.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+﻿body {
   background-color:#000000;
   background-image:url('./children_of_eden_by_parkbc-d2ylko8.jpg');
   background-position:center;
